<resources>
    <string name="app_name">SuitCase</string>
    <string name="login">Login</string>
    <string name="et_username">Username</string>
    <string name="et_password">Password</string>
    <string name="et_forgot_password">Forgot password?</string>
    <string name="login_btn">LOGIN</string>
    <string name="reg_btn">REGISTER</string>
    <string name="et_confirm_password">Confirm password</string>
    <string name="et_email">Email</string>
    <string name="SuitCase">SuitCase</string>
    <string name="nav_to_reg_btn">Don\'t have an account?</string>
    <string name="nav_to_login_btn">Already have an account?</string>
    <string name="remember_me">Remember me</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_word">Add New Item</string>
    <string name="item_name">Name</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Item not saved because its name is empty.</string>
    <string name="desc">Description</string>
    <string name="price">Price</string>
    <string name="image">Add Image</string>
    <string name="add_new_item">Add new item</string>
    <string name="choose_image">Choose Image</string>
    <string name="item_title">Item Title</string>
    <string name="item_sub_title">Item SubTitle</string>
</resources>